<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Objetivo">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_toolbar_h">

        <ImageView
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/toolbar_boton_regresar" />

        <ImageView
            android:src="@drawable/logo_fitory_bco"
            android:layout_centerInParent="true"
            android:layout_width="@dimen/toolbar_logo_w"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <RelativeLayout
                    android:onClick="salud"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                <ImageView
                    android:id="@+id/objetivo_salud"
                    android:scaleType="fitXY"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                    <TextView
                        android:text="@string/salud"
                        android:textSize="14sp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>
                <RelativeLayout
                    android:onClick="convivir"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                <ImageView
                    android:id="@+id/objetivo_convivir"
                    android:scaleType="fitXY"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                    <TextView
                        android:text="@string/convivir"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <RelativeLayout
                    android:onClick="vermeBien"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                <ImageView
                    android:id="@+id/objetivo_verme_bien"
                    android:scaleType="fitXY"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                    <TextView
                        android:text="@string/verme_bien"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
                <RelativeLayout
                    android:onClick="diversion"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                <ImageView
                    android:id="@+id/objetivo_diversion"
                    android:scaleType="fitXY"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                    <TextView
                        android:text="@string/diversiOn"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:clickable="false"
            android:onClick="stopTouch"
            android:id="@+id/tu_objetivo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

</RelativeLayout>